--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -1,9 +1,9 @@
 <div class="card">
   <%= link_to image_tag(prototype.image), prototype_path(prototype.id), class: :card__img %>
   <div class="card__body">
-    <%= link_to "title", prototype_path(prototype.id), class: :card__title %>
+    <%= link_to prototype.title, prototype_path(prototype.id), class: :card__title %>
     <p class="card__summary">
-      <%= "catch_copy" %>
+      <%= prototype.catch_copy %>
     </p>
     <%= link_to prototype.user.name, user_path(prototype.user.id), class: :card__user %>
   </div>
